extends Node

@onready var main_menu_music: AudioStreamPlayer = $MainMenuMusic
@onready var game_music: AudioStreamPlayer = $GameMusic
@onready var game_double_time_music: AudioStreamPlayer = $GameDoubleTimeMusic
@onready var lose_jingle_music: AudioStreamPlayer = $LoseJingleMusic
@onready var win_jingle_music: AudioStreamPlayer = $WinJingleMusic